--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,46 @@
+$navbar-default-bg: #FF7147;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.center {
+    text-align: center;
+}
+
+.jumbotron {
+    background-image: asset-url('home_image.png');
+    background-size: cover;
+    height: 400px;
+}
+
+#logo {
+    float: left;
+    font-size: 1.7em;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: bold;
+    
+}
+
+#logo:hover {
+    color: #fff;
+    text-decoration: none; 
+}
+
+
+.jumbotron h1, h2 {
+    color: #fff;
+    text-align: center;
+    margin-bottom: 30px
+}
+
+.btn-xlarge {
+    background-color: #FF7147;
+}
+
+.btn-xlarge:hover {
+    color: #fff;
+    text-decoration: none;
+}
+
