--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -29,7 +29,13 @@ $navbar-default-bg: #FF7147;
 }
 
 
-.jumbotron h1, h2 {
+.jumbotron h1 {
+    color: #fff;
+    text-align: center;
+    margin-bottom: 30px
+}
+
+.jumbotron h2 {
     color: #fff;
     text-align: center;
     margin-bottom: 30px
@@ -43,4 +49,10 @@ $navbar-default-bg: #FF7147;
     color: #fff;
     text-decoration: none;
 }
+
+
+
+
+
+
 
