Add new recipe creation with tests

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -50,6 +50,21 @@ $navbar-default-bg: #FF7147;
     text-decoration: none;
 }
 
+.description {
+    margin-top: 0;
+}
+
+.well a {
+    color: #FF7147;
+}
+
+.chef-info {
+    margin-top: 10px;
+}
+
+.colormatch a {
+    color: #FF7147;
+}
 
 
 
