Implement edit and delete on show page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -66,6 +66,13 @@ $navbar-default-bg: #FF7147;
     color: #FF7147;
 }
 
+.recipe-actions {
+    padding-top: 5px;
+    a {
+        color: #fff;
+    }
+}
+
 
 
 
