--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -6,7 +6,7 @@
     <hr />
     <div class="pull-right">
         <p class="center">
-            <em>Created by:</em>
+            <em>Created by:</em>   
         </p>
         <p class="center">
             <%= link_to gravatar_for(@recipe.chef), recipes_path %>
@@ -15,6 +15,12 @@
             <small><%= @recipe.chef.chefname.capitalize %></small>
             <div class="pull-right"><%= time_ago_in_words(@recipe.created_at) %> ago</div>
         </p>
+    </div>
+    <div class="recipe-actions">
+        <%= link_to "Edit this recipe", edit_recipe_path(@recipe), class: "btn btn-xs btn-warning" %>
+        <%= link_to "Delete this recipe", recipe_path(@recipe), method: :delete,
+                                        data: { confirm: "Are you sure you want to delete this recipe?" },
+                                        class: "btn btn-xs btn-danger" %>
     </div>
 </div>
 
