Add listing and pagination

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -71,6 +71,18 @@ $navbar-default-bg: #FF7147;
     a {
         color: #fff;
     }
+    
+}
+
+.listing {
+    list-style: none;
+    padding-left: 0;
+}
+
+.chef-title {
+    color: #FF7147;
+    font-weight: bold;
+    font-size: 1.25em;
 }
 
 
